[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdapy"
version = "2.3.1"
authors = [
  { name="Alec Ramsay", email="alec@davesredistricting.org" },
]
description = "Redistricting analytics in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["license", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/dra2020/rdapy"
"Bug Tracker" = "https://github.com/dra2020/rdapy/issues"